# dubois-visualization-package

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  SOURCES.txt  pyproject.toml  requires.txt  setup.py  setup.sh
dubois/: __init__.py  colors.py  layouts.py  themes.py  typography.py
dubois/charts/: __init__.py  area.py  bar.py  butterfly.py  pictorial.py  spiral.py  wrapped.py
examples/: basic_usage.py  chart_examples.py  gallery.py  phase3_examples.py  stress_test.py  test_random_data.py  test_with_real_data.py  try_your_data.py
tests/: test_charts.py  test_colors.py  test_phase3.py
