[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dubois-viz"
version = "1.0.0"
description = "Create matplotlib visualizations inspired by W.E.B. Du Bois' 1900 Paris Exposition data portraits"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Shalini Thinakaran"},
]
keywords = [
    "visualization",
    "matplotlib",
    "dubois",
    "data-visualization",
    "charts",
    "infographics",
    "data-portraits",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
    "Framework :: Matplotlib",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/shalinialisha/dubois-viz"
Documentation = "https://github.com/shalinialisha/dubois-viz#readme"
Repository = "https://github.com/shalinialisha/dubois-viz"
Issues = "https://github.com/shalinialisha/dubois-viz/issues"

[tool.setuptools.packages.find]
include = ["dubois*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
